<resources>
    <string name="app_name">Question Board</string>

    <!--Activities label strings for the manifest-->
    <string name="AddAnswerActivityLabel">Enter your answer</string>
    <string name="AddQuestionActivityLabel">Enter your question</string>
    <string name="ListAnswerActivityLabel">Answers page</string>
    <string name="ListQuestionActivityLabel">Questions page</string>
    <string name="LoginActivityLabel">Login page</string>
    <string name="RegisterActivityLabel">Register page</string>
    <string name="HomeActivityLabel">Home page</string>
    <string name="SettingsActivityLabel">Settings page</string>
    <string name="LanguageActivityLabel">Language page</string>
    <string name="ShowUsersActivityLabel">Show users page</string>
    <string name="ShowQuestionsActivityLabel">Show questions page</string>
    <string name="ShowAnswersActivityLabel">Show answers page</string>
    <string name="UpdateDatasActivityLabel">Update data page</string>
    <string name="DisplayDataActivityLabel">Display data page</string>

    <!-- Menu -->
    <string name="home">Home</string>
    <string name="questions">Questions</string>
    <string name="settings">Settings</string>

    <!--Login and Register activity-->
    <string name="username_hint">UserName</string>
    <string name="password_hint">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="invalid_user_password">Invalid username or password</string>
    <string name="username_taken">This username is already taken</string>

    <!--Add answer activity-->
    <string name="add_answer_content">Enter your comment here</string>
    <string name="select_question">Select a question</string>
    <string name="add">Add</string>

    <!--Add question activity-->
    <string name="add_question_title">Enter your question here</string>

    <!--Home activity-->
    <string name="btn_questions">Questions</string>
    <string name="btn_show_users">Show users</string>
    <string name="btn_show_questions">Show questions</string>
    <string name="btn_show_answers">Show answers</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_update_data">Update Datas</string>
    <string name="btn_change_language">Language</string>

    <!--List answer activity-->
    <string name="all_answers">Answers</string>
    <string name="no_answers">There is no answers to this question at the moment. Be the first to respond!</string>
    <string name="add_new_answer">Add new answer</string>
    <string name="answer_delete">Answer deleted</string>
    <string name="empty_fields_message">One or more fields are empty</string>
    <string name="delete">Delete</string>
    <string name="confirmation_message">Are you sure you want to delete the answer : </string>
    <string name="confirmation_messages">Are you sure you want to delete : </string>

    <!--List question activity-->
    <string name="all_questions">Questions</string>
    <string name="no_questions">There is no questions at the moment. Be the first to ask one!</string>
    <string name="add_new_question">Add new question</string>
    <string name="question_delete">Question deleted</string>

    <!--Settings activity-->
    <string name="btn_delete_users">Delete users</string>
    <string name="btn_delete_questions">Delete questions</string>
    <string name="btn_delete_answers">Delete answers</string>
    <string name="pref_summary">Define your preferred language</string>
    <string name="pref_selected_language">Select your language</string>

    <!--List item answer activity-->
    <string name="answer_content">Content</string>

    <!--List item question activity-->
    <string name="question_title">Question title</string>

    <!--DisplayAndEdit Activity -->
    <string name="Display_all_users">Users</string>
    <string name="Display_all_questions">Questions</string>
    <string name="Display_all_answers">Answers</string>

    <!--UpdateData Activity -->
    <string name="user">Users</string>
    <string name="question">Questions</string>
    <string name="answer">Answers</string>
    <string name="id">ID</string>
    <string name="name">Username</string>
    <string name="password">Password</string>
    <string name="title">Question Title</string>
    <string name="content">Answer Content</string>
    <string name="answer_question_id">QID</string>
    <string name="update">Update</string>

    <!--Items layout-->
    <string name="textview">TextView</string>

</resources>
