<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.vincent.afinal.Activities.HomeActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

        <Button
            android:text="@string/btn_questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_question"
            android:onClick="toQuestions"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/btn_showUsers"
            android:text="@string/btn_show_users"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showUsers"
            android:layout_below="@+id/btn_settings"
            android:layout_centerHorizontal="true"/>

        <Button
            android:text="@string/btn_show_questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_showQuestions"
            android:layout_below="@+id/btn_showUsers"
            android:layout_centerHorizontal="true"
            android:onClick="showQuestions"/>

        <Button
            android:text="@string/btn_show_answers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_showAnswers"
            android:layout_below="@+id/btn_showQuestions"
            android:layout_centerHorizontal="true"
            android:onClick="showAnswers"/>

        <Button
            android:text="@string/btn_update_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/btn_update"
            android:onClick="UpdateData"/>

        <Button
            android:text="@string/btn_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_settings"
            android:onClick="toSettings"
            android:layout_below="@+id/btn_question"
            android:layout_alignLeft="@+id/btn_question"
            android:layout_alignStart="@+id/btn_question"/>

        <Button
            android:text="@string/btn_change_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_language"
            android:onClick="toLanguage"/>
    </LinearLayout>
</RelativeLayout>
