<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_update_data"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.vincent.afinal.Activities.UpdateDataActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:ems="20"
            android:id="@+id/editText2"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:elevation="0dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:text="@string/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/updateUser"
            android:layout_weight="1"
            android:onClick="updateUserData"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:hint="@string/id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_id_user"
            android:layout_weight="1"
            android:paddingRight="20dp"/>

        <EditText
            android:hint="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_name_user"
            android:layout_weight="1"
            android:paddingRight="20dp"/>

        <EditText
            android:hint="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/tv_password_user"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_question"
            android:layout_weight="1"
            android:gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp">

        <EditText
            android:hint="@string/id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/et_update_question_id"
            android:layout_weight="15" />

        <EditText
            android:hint="@string/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/et_update_question_title"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp">

        <Button
            android:text="@string/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/updateQuestion"
            android:layout_weight="1"
            android:onClick="UpdateQuestionData"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="235dp"
        android:gravity="center_horizontal">

        <TextView
            android:text="@string/answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_answer"
            android:layout_weight="1"
            android:gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/id"
            android:ems="10"
            android:id="@+id/et_update_answer_id"
            android:layout_weight="25" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/content"
            android:ems="10"
            android:id="@+id/et_update_answer_content"
            android:layout_weight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/answer_question_id"
            android:ems="10"
            android:id="@+id/et_update_answer_question_id"
            android:layout_weight="25" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="290dp">

        <Button
            android:text="@string/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/updateAnswer"
            android:onClick="updateAnswerData"
            android:layout_weight="1" />
    </LinearLayout>

</RelativeLayout>
