<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_answer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.vincent.afinal.Activities.AddAnswerActivity">

    <EditText
        android:id="@+id/et_add_answer_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/add_answer_content"
        android:inputType="text"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@android:color/black" />

    <Spinner
        android:id="@+id/spinner_questions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_add_answer_content"
        android:layout_marginTop="8dp"
        android:prompt="@string/select_question"
        android:animateLayoutChanges="true"
        android:spinnerMode="dropdown" />

    <Button
        android:id="@+id/btn_addAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_questions"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:paddingBottom="2dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="2dp"
        android:text="@string/add"
        android:textAppearance="?android:attr/textAppearanceMedium" />
</RelativeLayout>
