<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_display_and_edit_data"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.vincent.afinal.Activities.DisplayDataActivity"
    android:orientation="vertical"
    android:layout_width="match_parent">

    <!--Layout pas utilisé dans la version final car pas assez de temps pour finaliser-->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="350dp"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/Display_all_users"
            android:id="@+id/btn_all_users"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/Display_all_questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_all_questions"
            android:layout_weight="1" />

        <Button
            android:text="@string/Display_all_answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_all_answers"
            android:layout_weight="1" />
    </LinearLayout>

    <fragment
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.example.vincent.afinal.Activities.DisplayDataFragment"
        android:id="@+id/fragment" />

</LinearLayout>
