<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.vincent.afinal.Activities.RegisterActivity">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="99dp"
        android:id="@+id/et_register_username"
        android:hint="@string/username_hint"
        android:background="@android:color/background_light" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/et_register_username"
        android:layout_alignLeft="@+id/et_register_username"
        android:layout_alignStart="@+id/et_register_username"
        android:layout_marginTop="16dp"
        android:id="@+id/et_register_password"
        android:hint="@string/password_hint"
        android:background="@android:color/background_light" />

    <Button
        android:text="@string/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_register_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:id="@+id/btn_register"
        android:onClick="registerUser"/>
</RelativeLayout>
