<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_list_questions"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.vincent.afinal.Activities.ListAnswersActivity">


    <TextView
        android:id="@+id/tv_all_answers"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical|left"
        android:text="@string/all_answers"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/tv_empty_list_answers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="4dp"
        android:gravity="center"
        android:text="@string/no_answers"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@android:color/darker_gray"
        android:visibility="gone" />

    <ListView
        android:id="@+id/list_answers"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@android:drawable/divider_horizontal_bright"
        android:dividerHeight="0.5dp"
        android:listSelector="@android:drawable/list_selector_background"
        android:layout_below="@+id/tv_all_answers"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btn_add_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_answer"
        android:layout_below="@+id/tv_empty_list_answers"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
