<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.vincent.afinal.Activities.SettingsActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/btn_delete_answers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_delete_questions"
            android:layout_alignRight="@+id/btn_delete_questions"
            android:layout_alignEnd="@+id/btn_delete_questions"
            android:layout_marginTop="35dp"
            android:id="@+id/btn_delete_answers"
            android:layout_alignLeft="@+id/btn_delete_questions"
            android:layout_alignStart="@+id/btn_delete_questions"
            android:onClick="delete_all_answers"/>

        <Button
            android:text="@string/btn_delete_questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_delete_users"
            android:layout_alignRight="@+id/btn_delete_users"
            android:layout_alignEnd="@+id/btn_delete_users"
            android:layout_marginTop="24dp"
            android:id="@+id/btn_delete_questions"
            android:onClick="delete_all_questions"/>

        <Button
            android:text="@string/btn_delete_users"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:id="@+id/btn_delete_users"
            android:onClick="delete_all_users"/>
    </LinearLayout>

</RelativeLayout>
